--- a/package.json
+++ b/package.json
@@ -10,14 +10,31 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/datetimepicker": "^7.6.3",
+    "@react-navigation/drawer": "^6.6.14",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^0.27.2",
     "react": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-native": "0.72.5",
+    "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-image-picker": "^5.3.1",
     "react-native-modal": "^13.0.1",
+    "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-svg": "^15.1.0",
+    "react-native-toast-message": "^2.1.5",
+    "react-native-vector-icons": "^10.0.0",
+    "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
